--- a/HealthyEats/app/src/main/res/values/strings.xml
+++ b/HealthyEats/app/src/main/res/values/strings.xml
@@ -8,4 +8,16 @@
     <string name="sign_up">Sign up</string>
     <string name="confirm_password">Confirm password</string>
     <string name="have_an_account_sign_in">Have an account? Sign in.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="date_format">yyyy-MM-dd</string>
+    <string name="select_date">Select Date</string>
+    <string name="selected_date">Selected Date: %1$s</string>
+    <string name="confirm">Confirm</string>
+    <string name="date_picker">DATE_PICKER</string>
+    <string name="delete">Delete</string>
+    <string name="add">Add</string>
+    <string name="diet">Diet</string>
+    <string name="analysis">Analysis</string>
+    <string name="recommend">Recommend</string>
 </resources>
