--- a/HealthyEats/app/src/main/res/values/strings.xml
+++ b/HealthyEats/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="diet">Diet</string>
     <string name="analysis">Analysis</string>
     <string name="recommend">Recommend</string>
+    <string name="breakfast">Breakfast</string>
+    <string name="lunch">Lunch</string>
+    <string name="dinner">Dinner</string>
 </resources>
