--- a/HealthyEats/app/src/main/res/values/strings.xml
+++ b/HealthyEats/app/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="breakfast">Breakfast</string>
     <string name="lunch">Lunch</string>
     <string name="dinner">Dinner</string>
+    <string name="add_diet">Add Diet</string>
+    <string name="cancel">Cancel</string>
+    <string name="client_id">674403ecb99a461cb7650568ae290f98</string>
+    <string name="client_secret">80aa7622a33f42a5a18c4a7738f4b13b</string>
 </resources>
