--- a/HealthyEats/app/src/main/res/values/strings.xml
+++ b/HealthyEats/app/src/main/res/values/strings.xml
@@ -33,4 +33,15 @@
     <string name="food">Food</string>
     <string name="weight">Weight</string>
     <string name="calories">Calories</string>
+    <string name="amount_g">amount(g)</string>
+    <string name="nutrition">Nutrition</string>
+    <string name="protein">Protein</string>
+    <string name="fat">Fat</string>
+    <string name="carbohydrate">Carbohydrate</string>
+    <string name="g">g</string>
+    <string name="kcal">KCAL</string>
+    <string name="name">Name</string>
+    <string name="weight_g">Weight(g)</string>
+    <string name="add_to_diet">Add to diet</string>
+    <string name="no_matches_found">No matches found</string>
 </resources>
